Address some of the sonarqube major issues.